--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.1",
+    "chart.js": "^4.2.1",
+    "chartkick": "^5.0.1",
     "esbuild": "^0.14.18",
     "sass": "^1.49.7"
   },
